# Snake-game-dx11

./: .gitignore  CMakeLists.txt  README.md
Snake/: AudioMan.cpp  AudioMan.hpp  CMakeLists.txt  Config.hpp  Game.cpp  Game.hpp  Language.cpp  Language.hpp  Timer.hpp  main.cpp  main.hpp
core/: CMakeLists.txt
core/include/: Audio.hpp  Graphics.hpp  Window.hpp  core_engine.hpp
core/src/: Audio.cpp  Graphics.cpp  Window.cpp
imgui/: CMakeLists.txt
resources/language/: en.lua  ru.lua
resources/shaders/: shader.fx
